--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
+    "express": "^4.19.2",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
@@ -17,13 +18,14 @@
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.2"
   },
-  "scripts": {
-    "heroku-prebuild": "npm install -g serve",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+"scripts": {
+  "heroku-prebuild": "npm install -g serve",
+  "start": "node server.js",
+  "build": "react-scripts build",
+  "heroku-postbuild": "npm run build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
