--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.2"
   },
-"scripts": {
-  "heroku-prebuild": "npm install -g serve",
-  "start": "node server.js",
-  "build": "react-scripts build",
-  "heroku-postbuild": "npm run build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
+  "scripts": {
+    "heroku-prebuild": "npm install -g serve",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
