--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "express": "^4.19.2",
+    "infinite-scroll-component": "^0.0.4",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
